<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.NewEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:orientation="vertical">

        <com.omarshehe.forminputkotlin.FormInputText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            app:form_hint=""
            app:form_inputType="text"
            app:form_label="@string/event_name" />

        <com.omarshehe.forminputkotlin.FormInputMultiline
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:form_height="@dimen/height_70"
            app:form_hint=""
            app:form_label="@string/event_desc"
            app:form_maxLength="500"

            />

        <com.omarshehe.forminputkotlin.FormInputAutoComplete
            android:id="@+id/locationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:form_array="@array/array_country"
            app:form_height="@dimen/formInputInput_box_height"
            app:form_hint=""
            app:form_inputType="text"
            app:form_label="Локација на настанот" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/in_date"
                android:layout_width="@dimen/width_200"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_30" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="@dimen/width_150"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/choose_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/in_time"
                android:layout_width="@dimen/width_200"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_30" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="@dimen/width_150"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/choose_time" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/entryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_40"
                android:text="@string/free_entry"
                android:textSize="@dimen/textsize_20" />

            <Switch
                android:id="@+id/simpleSwitch"
                android:layout_width="@dimen/margin_70"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_20"
                android:checked="true"
                android:text=""
                android:textOff="@string/textoff"
                android:textOn="@string/texton"

                />
        </RelativeLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="@dimen/width_200"
            android:layout_height="@dimen/height_55"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/save"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorGreen"
            app:cornerRadius="@dimen/radius" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>