<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rellay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:layout_width="@dimen/width_150"
                android:layout_height="@dimen/width_150"
                android:layout_margin="@dimen/margin_9"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="@dimen/padding_3"
                android:scaleType="fitXY"
                android:src="@mipmap/ticket" />


        </RelativeLayout>

        <com.jackandphantom.circularprogressbar.CircleProgressbar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/layout_250"
            android:layout_height="@dimen/layout_250"
            android:layout_centerHorizontal="true"
            app:cpb_foregroundProgressColor="@color/royalBlue"
            app:cpb_foregroundProgressWidth="35"
            app:cpb_progress="0"
            app:cpb_roundedCorner="true"
            app:cpb_touchEnabled="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_250"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_35"
                    android:text="@string/name"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/textsize_24">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_24">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_3"
                    android:background="@color/grey">

                </View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="@string/ticket_code"
                    android:textSize="@dimen/textsize_24" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/enter_code"
                    android:inputType="textPersonName"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_15"
                    android:gravity="center"
                    android:text="@string/or" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_event" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_btn" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="@dimen/margin_130"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/royalBlue"
                    android:text="@string/add_score"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>