<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:id="@+id/rellay"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/gradient">
            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_border"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="@dimen/width_150"
                    android:layout_height="@dimen/width_150"
                    android:src="@mipmap/ticket"
                    android:layout_margin="@dimen/margin_9"
                    android:padding="@dimen/padding_3"
                    android:background="@drawable/circle"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"/>


            </RelativeLayout>

            <com.jackandphantom.circularprogressbar.CircleProgressbar
                android:id="@+id/progress_circular"
                android:layout_width="@dimen/layout_250"
                android:layout_height="@dimen/layout_250"
                app:cpb_progress="0"
                app:cpb_roundedCorner="true"
                app:cpb_foregroundProgressWidth="35"
                app:cpb_foregroundProgressColor="@color/royalBlue"
                app:cpb_touchEnabled="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/layout_250"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/radius"
                        android:textColor="@color/heading"
                        android:textSize="@dimen/textsize_24"
                        android:text="@string/name">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginTop="@dimen/margin_15"
                        android:textSize="@dimen/textsize_24"
                        android:textColor="#000000">

                    </TextView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/padding_3"
                        android:background="@color/grey">

                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_15"
                        android:textSize="@dimen/textsize_24"
                        android:text="@string/ticket_code"/>

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/enter_code"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textSize="@dimen/textsize_18"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/margin_15"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_marginTop="@dimen/margin_15"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open_event" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save_btn"/>
                    <Button
                        android:id="@+id/button"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_score"
                        android:background="@color/royalBlue"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_15"/>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_alignParentBottom="true"
        android:background="@color/royalBlue"
        app:menu="@menu/bottom_navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>